# ffavorite

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  README.md  config.h.in  config.h.in~  configure  configure.ac  makefile  rememberd.c  rememberd.h  saved_data.txt
autom4te.cache/: output.0  output.1  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
client/: controller.cpp  controller.h  dbus_interface.cpp  dbus_interface.h  main.cpp  makefile  rem  rem.cpp  rem.h  tfmanctl  tfmanctl.cpp  tfmanctl.h
doc/: dbus-interface.txt
src/: README.md  main.cpp  makefile  remember.service  rememberd  rememberd.cpp  rememberd.h  sv.out  tfmand.cpp  tfmand.h
